[gd_scene load_steps=2 format=3 uid="uid://c4lcnm5h0yvni"]

[ext_resource type="Script" uid="uid://dkr2s4wmkiyxg" path="res://scripts/hud.gd" id="1_ahhtf"]

[node name="HUD" type="CanvasLayer"]
offset = Vector2(50, 0)
transform = Transform2D(1, 0, 0, 1, 50, 0)
script = ExtResource("1_ahhtf")

[node name="HUDPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="WeaponIcon" type="TextureRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 52.0
offset_right = 40.0
offset_bottom = 92.0
grow_vertical = 0

[node name="AmmoCounter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="AmmoCounter"]
layout_mode = 0
offset_top = 29.0
offset_right = 53.0
offset_bottom = 52.0
text = "AMMO"

[node name="AmmoLabel" type="Label" parent="AmmoCounter"]
layout_mode = 0
offset_left = 171.0
offset_top = 33.0
offset_right = 211.0
offset_bottom = 56.0
text = "6/6"

[node name="ReloadTimer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="ReloadTimer"]
layout_mode = 0
offset_left = 79.0
offset_top = 26.0
offset_right = 83.0
offset_bottom = 53.0

[node name="TimeLabel" type="Label" parent="ReloadTimer"]
layout_mode = 0
offset_left = 112.0
offset_top = 31.0
offset_right = 152.0
offset_bottom = 54.0
text = "1.1s"

[node name="CircleProgress" type="TextureProgressBar" parent="ReloadTimer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BulletVisual" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Container" type="HBoxContainer" parent="BulletVisual"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 29.0
